--- a/fluidSim/index.html
+++ b/fluidSim/index.html
@@ -25,7 +25,7 @@
         xtop: 0;
         xleft: 0;
       }
-      fluid-canvas #canvas_obj
+      fluid-canvas #objs_canvas
       {
         width: 100%;
         position: absolute;
