--- a/fluidSim/index.html
+++ b/fluidSim/index.html
@@ -21,9 +21,6 @@
       {
         width: 100%;
         height: 100%;
-        xposition: absolute;
-        xtop: 0;
-        xleft: 0;
       }
       fluid-canvas #objs_canvas
       {
@@ -40,25 +37,12 @@
   </head>
 
   <body>
-    <fluid-canvas id="fc"></fluid-canvas>
+    <fluid-canvas id="fc" resolution="128"></fluid-canvas>
     <div id = log></div>
     <button id="start_btn">start</button>
     <button id="stop_btn">stop</button>
     <button id="reset_btn">reset</button><br />
     <button id="toggle_btn">Toggle drawing mode</button><br />
     Solver Iterations: <input id="iterations" type="range" min=1 max=75><br />
-    Resolution:
-    <select id="resolution">
-      <option>8</option>
-      <option>16</option>
-      <option>24</option>
-      <option>32</option>
-      <option>48</option>
-      <option>64</option>
-      <option>96</option>
-      <option>128</option>
-      <option>256</option>
-      <option>512</option>
-    </select>
   </body>
 </html>
