--- a/fluidSim/index.html
+++ b/fluidSim/index.html
@@ -2,20 +2,67 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Borel&family=Plus+Jakarta+Sans:wght@200;300&display=swap" rel="stylesheet">
     <style>
       body 
       {
         background: #000;
         color: white;
-        font-family: Helvetica;
+        font-family: 'Borel', cursive;
+        font-size: 24px;
         padding: 0;
-        margin: 0;
+        margin: 24px;
       }
+      header
+      {
+        display: flex;
+      }
+      header span
+      {
+        font-size: 2.5rem;
+        width: 100%;
+      }
+      header div
+      {
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        gap: 10px;
+      }
+      header button
+      {
+        border: 8px solid rgb(134 155 183);
+        border-radius: 100px;
+        background-color: #fff;
+        font-family: 'Borel', cursive;
+        padding: 10px 10px 0 10px;
+        vertical-align: middle;
+        text-align: center;
+        font-size: 1rem;
+        cursor: pointer;
+        transition: all 250ms;
+        white-space: nowrap;
+      }
+      header button:hover
+      {
+        transform: scale(1.2);
+      }
+      header button:active
+      {
+        transform: scale(0.8);
+      }
+
       fluid-canvas
       {
         display: inline-block;
-        width: 100%;
+        width: calc(100% - 20px);
         position: relative;
+        font-size: 0;
+        border: 10px solid rgb(134 155 183);
+        border-radius: 10px;
+        overflow: hidden;
       }
       fluid-canvas #canvas
       {
@@ -30,19 +77,73 @@
         left: 0;
         pointer-events: none;
       }
+      fluid-canvas #score_elem
+      {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        font-size: 128px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        pointer-events: none;
+        padding: 64px 0 0 0;
+        transform: scale(0) rotateZ(0deg);
+        color: rgb(135 255 76);
+      }
+      fluid-canvas #score_elem.anim-zoom
+      {
+        animation-duration: 3s;
+        animation-name: zoom;
+        animation-iteration-count: 1;
+      }
+      fluid-canvas #intro_dlg
+      {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 84%;
+        height: 84%;
+        color: #000;
+        font-size: 32px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        padding: 8%;
+        background-color: #fff;
+      }
+      @keyframes zoom
+      {
+        from
+        {
+          transform: scale(0) rotateZ(0deg);
+          opacity: 1;
+        }
+        to
+        {
+          transform: scale(10) rotateZ(400deg);
+          opacity: 0;
+        }
+      }
+
     </style>
-    <title>Oliver's simple fluid dynamics simulator</title>
+    <title>Nauti-Cats</title>
     <script src="FluidField.js"></script>
     <script src="Fluid_Canvas.js" type="module"></script>
   </head>
 
   <body>
+    <header>
+      <span>Nauti-Cats</span>
+      <div>
+        <button id="start_btn" hidden>Pause</button>
+        <button id="reset_btn">New Game</button>
+      </div>
+    </header>
+
     <fluid-canvas id="fc" resolution="128"></fluid-canvas>
-    <div id = log></div>
-    <button id="start_btn">start</button>
-    <button id="stop_btn">stop</button>
-    <button id="reset_btn">reset</button><br />
-    <button id="toggle_btn">Toggle drawing mode</button><br />
-    Solver Iterations: <input id="iterations" type="range" min=1 max=75><br />
   </body>
 </html>
