--- a/fluidSim/index.html
+++ b/fluidSim/index.html
@@ -77,6 +77,16 @@
         left: 0;
         pointer-events: none;
       }
+      fluid-canvas #clock_canvas
+      {
+        width: 10%;
+        position: absolute;
+        top: 0;
+        right: 0;
+        pointer-events: none;
+        margin: 10px;
+        opacity: 0.5;
+      }
       fluid-canvas #score_elem
       {
         position: absolute;
@@ -99,7 +109,7 @@
         animation-name: zoom;
         animation-iteration-count: 1;
       }
-      fluid-canvas #intro_dlg
+      fluid-canvas .msg
       {
         position: absolute;
         top: 0;
@@ -114,6 +124,10 @@
         text-align: center;
         padding: 8%;
         background-color: #fff;
+      }
+      fluid-canvas #cat_count
+      {
+        margin: 0 10px;
       }
       @keyframes zoom
       {
