--- a/fluidSim/index.html
+++ b/fluidSim/index.html
@@ -68,6 +68,7 @@
       {
         width: 100%;
         height: 100%;
+        touch-action: none;
       }
       fluid-canvas #objs_canvas
       {
