--- a/fluidSim/index.html
+++ b/fluidSim/index.html
@@ -14,10 +14,14 @@
         font-size: 24px;
         padding: 0;
         margin: 24px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
       }
       header
       {
         display: flex;
+        width: 100%;
       }
       header span
       {
@@ -57,7 +61,7 @@
       fluid-canvas
       {
         display: inline-block;
-        width: calc(100% - 20px);
+        width: min(calc(100vw - 65px), calc(100vh - 148px));
         position: relative;
         font-size: 0;
         border: 10px solid rgb(134 155 183);
