--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <body>
-    <video src="video/webgl-fluid-simulation.mp4" autoplay loop></video>
+    <a href="fooling-with-fluids.html">Fooling with Fluids</a>
   </body>
 
 </html>
