--- a/fooling-with-fluids.html
+++ b/fooling-with-fluids.html
@@ -14,17 +14,20 @@
         font-family: 'Poppins', sans-serif;
         background-color: #222;
         color: #bbb;
-        padding: 0 100px;
+        padding-left: min(8%, 80px);
+        padding-right: min(8%, 80px);
         margin: 0;
       }
       section
       {
         overflow: hidden;
         margin-top: 50px;
+        text-align: center;
       }
       video
       {
         width: 100%;
+        max-width: 800px;
       }
       h1
       {
@@ -35,6 +38,7 @@
         padding: 0 0 0 35px;
         vertical-align: bottom;
         letter-spacing: 4px;
+        text-align: start;
       }
       h2
       {
@@ -45,10 +49,12 @@
         padding: 0 0 0 15px;
         vertical-align: bottom;
         letter-spacing: 4px;
+        text-align: start;
       }
       h3
       {
         font-size: 1rem;
+        text-align: start;
       }
       a
       {
@@ -61,10 +67,12 @@
         font-size: 1.5rem;
         padding: 0;
         margin: 0 0 50px 0;
+        text-align: start;
       }
       ul
       {
         font-size: 1.5rem;
+        text-align: start;
       }
       span
       {
@@ -99,6 +107,7 @@
         height: 100%;
         object-fit: cover;
         margin: 0 0 100px 0;
+        max-width: inherit;
       }
       #s1 div
       {
@@ -107,7 +116,7 @@
         right: 0;
         width: 70%;
         background-color: #000c;
-        padding: 40px;
+        padding: min(8%, 40px);
         margin: 0;
       }
       #s1 p
@@ -119,41 +128,36 @@
 
       #s2 video
       {
-        margin: 0 0 -50% 0;
+        margin-bottom: max(-400px, -50%);
       }
 
       #s3 video
       {
-        margin: 0 0 -40% 0;
+        margin-bottom: max(-300px, -40%);
       }
 
-      @media(min-resolution: 300dpi)
+      /*@media (min-resolution: 300dpi)*/
+      @media (max-width: 768px)
       {
         html
         {
-          background-color: #0f0;
+          font-size: 12px;
         }
-        xh2
+        h1
         {
+          padding: 0 0 0 15px;
+          border-left: 15px solid #f00;
           font-size: 3rem;
-          padding: 0 0 0 20px;
         }
-        xp
+        span
         {
-          font-size: 2rem;
-        }
-        xul
-        {
-          font-size: 2rem;
+          border-left: 10px solid #f00;
+          padding: 0 0 0 5px;
         }
 
-        x#s1 p
+        #s1 p
         {
-          font-size: 2rem;
-        }
-        xsection
-        {
-          margin-top: 100px;
+          font-size: 1.5rem;
         }
       }
     </style>
