--- a/fooling-with-fluids.html
+++ b/fooling-with-fluids.html
@@ -167,7 +167,7 @@
     <section id="s1">
       <h3>Esteban Ramirez - 21/08/2023</h3>
       <h1>Fooling with Fluids</h1>
-      <video src="video/webgl-fluid-simulation.mp4" autoplay loop></video>
+      <video src="video/webgl-fluid-simulation.mp4" autoplay loop muted playsinline></video>
       <div>
         <p>
           So I've fallen into yet another internet rabbit hole. This time it's Fluid Dynamics. 
@@ -191,7 +191,7 @@
           effects? Only one way to find out. Try something myself.
         </p>
       </div>
-      <video src="video/interplanetary-postal-service.mp4" autoplay loop></video>
+      <video src="video/interplanetary-postal-service.mp4" autoplay loop muted playsinline></video>
     </section>
     <section id="s3">
       <div>
@@ -207,7 +207,7 @@
           <a href="https://nerget.com/fluidSim">site</a>.
         </p>
       </div>
-      <video src="video/olivers-fluid-dynamics-simulator.mp4" autoplay loop></video>
+      <video src="video/olivers-fluid-dynamics-simulator.mp4" autoplay loop muted playsinline></video>
     </section>
     <section id="s4">
       <div>
@@ -229,7 +229,7 @@
           phone screens.
         </p>
       </div>
-      <video src="video/nauti-cats.mp4" autoplay loop></video>
+      <video src="video/nauti-cats.mp4" autoplay loop muted playsinline></video>
     </section>
     <section id="s5">
       <div>
@@ -251,7 +251,7 @@
           goal of world domination and decadent leisure by now.
         </p>
       </div>
-      <video src="video/digital-marbling.mp4" autoplay loop></video>
+      <video src="video/digital-marbling.mp4" autoplay loop muted playsinline></video>
     </section>
     <section id="s6">
       <p>
