--- a/fooling-with-fluids.html
+++ b/fooling-with-fluids.html
@@ -2,8 +2,9 @@
 <html>
 
   <head>
-    <meta charset="utf-8">
     <title>Occam's Machete - Fooling with Fluids</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=768px, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&family=Poppins:wght@300&display=swap" rel="stylesheet">    
