--- a/fooling-with-fluids.html
+++ b/fooling-with-fluids.html
@@ -49,6 +49,7 @@
         vertical-align: bottom;
         letter-spacing: 4px;
         text-align: start;
+        text-shadow: 5px 5px 4px black;
       }
       h2
       {
