--- a/fooling-with-fluids.html
+++ b/fooling-with-fluids.html
@@ -230,19 +230,23 @@
         <p>
           <span>W</span>ithout knowing what kind of game to write, I proceeded to combine the JavaScript in 
           "index.html" and "pressure-display.js" into a single Web Component. In case it's not 
-          obvious by now, I too will be sticking with JavaScript and the Vanilla JS framework. Why 
+          obvious by now, I too will be sticking with JavaScript and the 
+          <a href="http://vanilla-js.com/">Vanilla JS</a> framework. Why 
           not TypeScript and React? Because I intend to come out of this rabbit hole with my 
-          sanity intact. Besides, Vanilla JS is a consistent winner on The Benchmark. The resulting 
-          game code is available on Github.
+          sanity intact. Besides, Vanilla JS is a consistent winner on 
+          <a href="https://krausest.github.io/js-framework-benchmark/2022/table_chrome_104_windows.html">The Benchmark</a>. 
+          The resulting game code is available on 
+          <a href="https://github.com/netssrmrz/blog/tree/main/fluidSim">Github</a>.
         </p>
         <p>
           <span>T</span>he game is, of course, ludicrously "simple". All you have to do is herd the cats into 
           the central building. You do this by swiping currents with the mouse or via touch, until 
           time runs out. Oliver's code exposes a couple of functions to extract the "velocity" at a 
           given point on the surface of the fluid so I coupled this to a few floating cats 
-          (as one does) and voilà, Nauti-Cats. Oh, also, the code was converted to be less 
-          monochromatic and more Technicolor and, to be truthful, it's not really playable on small 
-          phone screens.
+          (as one does) and voilà, 
+          <a href="https://netssrmrz.github.io/blog/fluidSim/">Nauti-Cats</a>. 
+          Oh, also, the code was converted to be less monochromatic and more Technicolor and, to be 
+          truthful, it's not really playable on small phone screens.
         </p>
       </div>
       <video src="video/nauti-cats.mp4" autoplay loop muted playsinline></video>
@@ -252,9 +256,12 @@
         <p>
           <span>I</span>n conclusion, it would seem there's no reason why someone couldn't get filthy rich 
           writing the next Floaty Bird, though, a more complex game world would help. To this end 
-          we have Dan Schroeder's fluid dynamics simulation which allows one to build barriers 
-          against which the fluid may flow. Additionally, there's the game Interplanetary Postal 
-          Service which shows how this might work and I'd love to incorporate these effects into 
+          we have 
+          <a href="https://physics.weber.edu/schroeder/fluids/">Dan Schroeder's fluid dynamics simulation</a> 
+          which allows one to build barriers 
+          against which the fluid may flow. Additionally, there's the game 
+          <a href="https://js13kgames.com/games/interplanetary-postal-service/index.html">Interplanetary Postal Service</a>
+          which shows how this might work and I'd love to incorporate these effects into 
           more mundane websites, though they couldn't be triggered by mouse hovering as this would 
           exclude all touch-based devices. Perhaps "waves" could emanate from buttons and menu 
           selections and bounce off other content? The rabbit hole deepens and I haven't even 
