--- a/fooling-with-fluids.html
+++ b/fooling-with-fluids.html
@@ -4,7 +4,7 @@
   <head>
     <title>Occam's Machete - Fooling with Fluids</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=768, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&family=Poppins:wght@300&display=swap" rel="stylesheet">    
@@ -160,8 +160,8 @@
         h1
         {
           padding: 0 0 0 15px;
-          border-left: 15px solid #f00;
-          font-size: 5rem;
+          border-left: 15px solid #0f0;
+          xfont-size: 5rem;
         }
         span
         {
@@ -171,7 +171,7 @@
 
         #s1 p
         {
-          font-size: 2rem;
+          xfont-size: 2rem;
         }
       }
     </style>
