--- a/fooling-with-fluids.html
+++ b/fooling-with-fluids.html
@@ -161,7 +161,7 @@
         {
           padding: 0 0 0 15px;
           border-left: 15px solid #0f0;
-          xfont-size: 5rem;
+          font-size: 2.3rem;
         }
         span
         {
@@ -171,7 +171,7 @@
 
         #s1 p
         {
-          xfont-size: 2rem;
+          font-size: 1.4rem;
         }
       }
     </style>
