--- a/fooling-with-fluids.html
+++ b/fooling-with-fluids.html
@@ -160,7 +160,7 @@
         h1
         {
           padding: 0 0 0 15px;
-          border-left: 15px solid #0f0;
+          border-left: 15px solid #f00;
           font-size: 2.3rem;
         }
         span
