--- a/simulating-slots.html
+++ b/simulating-slots.html
@@ -149,11 +149,6 @@
         font-size: 2rem;
       }
 
-      #s3 video
-      {
-        margin-bottom: max(-300px, -40%);
-      }
-
       /*@media (min-resolution: 300dpi)*/
       @media (max-width: 768px)
       {
@@ -190,7 +185,7 @@
       <video src="video/slots.mp4" autoplay loop muted playsinline></video>
       <div>
         <p>
-          So, I came accross a nice 
+          So, I came across a nice 
           <a href="https://frontendmasters.com/blog/light-dom-only/">Frontend Masters 
           article, by Chris Coyier, titled "Light-DOM-Only Web Components are Sweet"</a>.
           In it, Chris extols the virtues of what he refers to as "Light DOM" Web Components.
