--- a/simulating-slots.html
+++ b/simulating-slots.html
@@ -186,7 +186,7 @@
       <div>
         <p>
           So, I came across a nice 
-          <a href="https://frontendmasters.com/blog/light-dom-only/">Frontend Masters 
+          <a href="https://frontendmasters.com/blog/light-dom-only/" target="_blank">Frontend Masters 
           article, by Chris Coyier, titled "Light-DOM-Only Web Components are Sweet"</a>.
           In it, Chris extols the virtues of what he refers to as "Light DOM" Web Components.
           Light components are simply Web Components that do not use any shadow DOM.
