--- a/simulating-slots.html
+++ b/simulating-slots.html
@@ -99,6 +99,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 10px;
+        color: #fff;
       }
 
       @keyframes pulse
