--- a/simulating-slots.html
+++ b/simulating-slots.html
@@ -100,6 +100,7 @@
         grid-template-columns: 1fr 1fr;
         gap: 10px;
         color: #fff;
+        overflow: scroll;
       }
 
       @keyframes pulse
