--- a/simulating-slots.html
+++ b/simulating-slots.html
@@ -100,7 +100,7 @@
         grid-template-columns: 1fr 1fr;
         gap: 10px;
         color: #fff;
-        overflow: scroll;
+        overflow-x: scroll;
       }
 
       @keyframes pulse
