--- a/simulating-slots.html
+++ b/simulating-slots.html
@@ -5,6 +5,11 @@
     <title>Occam's Machete - Simulating Slots</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="title" property="og:title" content="Simulating Slots">
+    <meta name="image" property="og:image" content="image/slots.webp">
+    <meta name="description" property="og:description" content="One approach to accessing HTML slot functionality from plain 'light' Web Components">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&family=Poppins:wght@300&display=swap" rel="stylesheet">    
