--- a/simulating-slots.html
+++ b/simulating-slots.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="title" property="og:title" content="Simulating Slots">
+    <meta name="title" property="og:title" content="Simulating HTML Shadow DOM Slots (No Gambling Required)">
     <meta name="image" property="og:image" content="image/slots.webp">
     <meta name="description" property="og:description" content="One approach to accessing HTML slot functionality from plain 'light' Web Components">
 
